# SimulationEngine

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  exceptions.py  logging.py  rate_limit.py  request_context.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  analysis.py  extracted_product_data.py  feedback.py  icp_profile.py  mixins.py  scenario.py  simulation.py  user.py
backend/app/repositories/: analysis_repository.py  feedback_repository.py  user_repository.py
backend/app/schemas/: analysis.py  auth.py  common.py  feedback.py  product.py  simulation.py
backend/app/services/: analysis_cloner.py  analysis_pipeline.py  analysis_workflow.py  auth_service.py  domain_types.py  icp_generation_service.py  outcome_aggregator.py  presenters.py  product_understanding_service.py  review_view_builder.py  scenario_generation_service.py  scraper_service.py  simulation_engine.py
backend/app/tests/: conftest.py  factories.py  test_analysis_repository.py  test_analysis_routes.py  test_auth_routes.py  test_config.py  test_e2e_happy_path.py  test_openai_analysis_service.py  test_product_understanding_service.py  test_review_view_builder.py  test_schemas.py  test_scraper_service.py  test_simulation_engine.py  (+1 more)
backend/decision_simulation_engine_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/scripts/: seed_demo.py
(+89 files in other folders)
